--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
               <div class="position-absolute transform3dx-n50 left-50pct z-index-0" style="top: 56px;">
                 <h2
                   class="text-color-dark custom-stroke-text-effect-1 custom-big-font-size-1 font-weight-black opacity-1 mb-0">
-                  DESTINOS</h2>
+                  DESTINOSSSS</h2>
               </div>
             </div>
             <h3 class="text-transform-none textColor font-weight-black text-10 line-height-2 mb-3">DESTINOS</h3>
