[main] create button whassap

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="img/Logotipo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="apple-touch-icon" href="./node_modules/porto/img/apple-touch-icon.png">
 
   <!-- Mobile Metas -->
@@ -208,6 +209,10 @@
         <button role="button" class="owl-dot"><span></span></button>
       </div>
     </div>
+    <a class="d-flex flex-row-reverse" href="https://api.whatsapp.com/send?phone=2281083266" target="_blank">
+      <img src="/img/logo-whassap.png" alt="WhatsApp"
+        style="z-index: 999; position: fixed; top: calc(50vh - 50px); transition: top 0.5s ease-in-out; width: 60px;">
+    </a>
     <!--CARDS -->
     <section id="main" class=" section border-0 position-relative m-0 h-100">
       <div class="colorCards V2yfr"></div>
