[main] add google tag manager i all pages

--- a/caffeeTime.html
+++ b/caffeeTime.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script src="js/googleTag.js"></script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,14 +55,14 @@
   <script src="vendor/js/modernizr.min.js"></script>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2NE2LTXYT"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2NE2LTXYT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-Q2NE2LTXYT');
-</script>
+    gtag('config', 'G-Q2NE2LTXYT');
+  </script>
 
 </head>
 
@@ -112,8 +115,7 @@
                     </ul>
                   </nav>
                 </div>
-                <a class="btn colorGeneral font-weight-semibold px-4 ms-3"
-                  href="packages.html"
+                <a class="btn colorGeneral font-weight-semibold px-4 ms-3" href="packages.html"
                   target="_blank">Reservar!</a>
                 <button class="btn header-btn-collapse-nav" data-bs-toggle="collapse"
                   data-bs-target=".header-nav-main nav"><i class="fa fa-bars"></i></button>
@@ -150,7 +152,8 @@
           data-hash-offset="80">Sroll To Bottom</a>
       </div>
     </section>
-    <section id="main" class="section section-no-border section-angled bg-color-light-scale-1 m-0" style="padding: 0px;">
+    <section id="main" class="section section-no-border section-angled bg-color-light-scale-1 m-0"
+      style="padding: 0px;">
       <div id="examples" class="container py-2">
         <div class="row">
           <div class="col">
@@ -199,7 +202,8 @@
                 </div>
                 <div class="process-step-content">
                   <h4 class="mb-0 text-4 font-weight-bold">La elaboración del café</h4>
-                  <p class="mb-0">Hasta llegar a la taza de quien lo consume requiere realmente un gran trabajo, principalmente al buscar un
+                  <p class="mb-0">Hasta llegar a la taza de quien lo consume requiere realmente un gran trabajo,
+                    principalmente al buscar un
                     café de alta calidad. El trabajo empieza en la finca, con la adecuada selección de los frutos
                     llamados cerezas de café y la exactitud del tiempo para el corte.</p>
                 </div>
