--- a/packages.html
+++ b/packages.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script src="js/googleTag.js"></script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,14 +57,14 @@
   <script src="vendor/js/modernizr.min.js"></script>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2NE2LTXYT"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2NE2LTXYT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-Q2NE2LTXYT');
-</script>
+    gtag('config', 'G-Q2NE2LTXYT');
+  </script>
 
 </head>
 
@@ -74,8 +77,8 @@
           <div class="header-column">
             <div class="header-row">
               <div class="">
-                <a href="index.html"><img alt="Porto" height="auto" data-sticky-width="82"
-                    data-sticky-height="40" data-sticky-top="0" src="img/Logotipo.png" style="width:106px"></a>
+                <a href="index.html"><img alt="Porto" height="auto" data-sticky-width="82" data-sticky-height="40"
+                    data-sticky-top="0" src="img/Logotipo.png" style="width:106px"></a>
               </div>
             </div>
           </div>
@@ -114,8 +117,7 @@
                     </ul>
                   </nav>
                 </div>
-                <a class="btn colorGeneral font-weight-semibold px-4 ms-3"
-                  href="packages.html"
+                <a class="btn colorGeneral font-weight-semibold px-4 ms-3" href="packages.html"
                   target="_blank">Reservar!</a>
                 <button class="btn header-btn-collapse-nav" data-bs-toggle="collapse"
                   data-bs-target=".header-nav-main nav"><i class="fa fa-bars"></i></button>
