--- a/about.html
+++ b/about.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script src="js/googleTag.js"></script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
